--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<title>Rikuo's Github Page</title>
 </head>
 <body>
-	<h1>I'm too lazy to make a real page<h1>
+	<div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-post" data-href="https://www.facebook.com/video.php?v=885013948238356" data-width="500"></div>
 </body>
 </html>
