--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Rikuo's Github Page</title>
 </head>
 <body>
-	<h1>Too lazy again</h1>
-    <a href="kaken.pdf">kaken</a>
+	<h1>Rikuo's Bad Web Page</h1>
+    <a href="kaken.pdf">2014年度課題研究</a>
 </body>
 </html>
