--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Rikuo's Github Page</title>
+	<title>Rikuo's Bad Web Page</title>
 </head>
 <body>
 	<h1>Rikuo's Bad Web Page</h1>
