--- a/index.html
+++ b/index.html
@@ -1,41 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Test Page</title>
-  <link rel="stylesheet" href="css/animation.css"/>
-  <link rel="stylesheet" href="css/stylesheets.css"/>
-  <script type="text/javascript" src="lib-js/require.js"></script>
-  <script type="text/javascript" src="lib-js/jquery.min.js"></script>
-</head>
-<body>
-  <div class="header">
-      <div class="header-btn">
-        <h1><a href="#1" class="header-text noto-sans">hoge</h1></a>
-      </div>
-  </div>
-<div class="main">
-  <div class="container">
-    <div class="fourth color1" id="1">
-      <div class="third-left center-vertical"></div>
-      <div class="two-thirds-right center-vertical">
-        <div class="center-vertical">
-        <h1 class="underline noto-sans">Honya Honya</h1>
-        <p class="noto-sans">  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in dui a mauris malesuada imperdiet. Integer turpis quam, convallis ac ex id, porta posuere ex. Suspendisse mattis tortor sapien, eu faucibus nunc sagittis accumsan. Nam in dui pulvinar, cursus ipsum sit amet, interdum neque. Nulla non tincidunt risus. Cras varius egestas tincidunt. Quisque non aliquam eros, id varius ipsum. Donec ac elit eget quam hendrerit varius. Integer accumsan cursus lorem eu suscipit. Nam efficitur faucibus elit, nec maximus lacus dictum vitae.
-Nam in arcu ante. Etiam lacinia libero non dictum tempus. Ut mollis vel ligula non viverra. Proin vulputate velit nisi, placerat sollicitudin mi pulvinar vitae. Phasellus fringilla ante ac ex efficitur sodales. Donec malesuada massa quis justo vehicula, vitae dignissim ex dignissim. Quisque gravida quam eu tempus ultricies. Vivamus interdum congue mauris, nec molestie arcu venenatis eget. Cras vitae fringilla velit. Mauris in bibendum felis. Nam viverra massa eget libero venenatis lobortis. Ut rutrum, nisi at pharetra molestie, ante turpis fermentum mi, quis ornare massa eros in ligula. Nunc lacinia ultricies erat non volutpat.
-Phasellus eget ornare augue. Aliquam cursus lacus at dictum vehicula. Donec sit amet rhoncus neque.
-Nunc volutpat nulla in leo malesuada tempor. Fusce nunc metus, hendrerit sit amet dapibus sed, luctus eu ligula. Quisque mi enim, posuere eu felis in, placerat porta neque. Phasellus semper, erat non egestas eleifend, sapien enim imperdiet orci, et posuere sem tellus ornare est. Vestibulum dapibus tellus non massa ultrices ultrices. Duis luctus massa non turpis pharetra aliquet. Sed ut."
-        </p>
-      </div>
-      </div>
-    </div>
-    <div class="fourth color2" id="2">
-      <div class="yellow" id="move"></div>
-    </div>
-    <div class="fourth color1" id="3"></div>
-    <div class="fourth color2" id="4"></div>
-  </div>
-</div>
-<script type="text/javascript" src="js/index.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>StopWatch</title>
+    <link rel="stylesheet" href="stylesheets.css" media="screen" title="no title" charset="utf-8">
+  </head>
+  <body>
+    <div id="box">
+      <h1 id="timer">00:00:00:000</h1>
+      <button type="button" id="start">start</button>
+      <button type="button" id="stop">stop</button>
+      <button type="button" id="reset">reset</button>
+   </div>
+    <script type="text/javascript" src="./index.js"></script>
+  </body>
 </html>
